# dimgaai

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  dimgaai.ps1  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: documents.py  export.py  session.py
backend/app/models/: events.py  session_store.py
backend/app/services/: audio_decode.py  claim_detector.py  deepgram_stream.py  export.py  llm_provider.py  meeting_glossary.py  question_gen.py  rag_factcheck.py  transcript_normalize.py  web_search.py
backend/app/ws/: meeting.py  segment_batcher.py
backend/dimgaai_cli/: __init__.py  __main__.py  bootstrap.py  doctor.py  main.py  paths.py  portable_tools.py  prereqs.py  processes.py  setup_wizard.py
backend/scripts/: demo_checklist.py  dimgaai.ps1
docs/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DocumentUpload.tsx  ExportButton.tsx  MicControls.tsx  OnboardingOverlay.tsx  SettingsPanel.tsx  TopBar.tsx  TranscriptPanel.tsx  VerdictSidebar.tsx
frontend/src/hooks/: useAudioCapture.ts  useMeetingSocket.ts
frontend/src/types/: events.ts
scripts/: dimgaai.bat  dimgaai.ps1  dimgaai.sh  install.ps1  install.sh
