[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dimgaai-cli"
version = "0.3.0"
description = "Local CLI for dimgaai Cantonese meeting support"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
dimgaai = "dimgaai_cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["dimgaai_cli*"]
